# mighty-ide

./: .gitignore  BUILDING.md  CHANGELOG.md  Cargo.toml  Create-Desktop-Shortcut.ps1  KEYBINDINGS.md  LICENSE  README.md  RUN.txt  build-ide.sh  mighty.toml  package-win.sh
crates/mighty-ui-sys/: Cargo.toml
crates/mighty-ui-sys/include/: mighty_ui.h
crates/mighty-ui-sys/src/: abi.rs  agents.rs  agentsabi.rs  ai.rs  blame.rs  colorize.rs  completion.rs  config.rs  crumbmenu.rs  dap.rs  dapabi.rs  diagnostics.rs  diff.rs  editor.rs  featureabi.rs  ffi.rs  fold.rs  format.rs  ghost.rs  ghostabi.rs  gpu.rs  history.rs  icons.rs  langdetect.rs  language.rs  layout.rs  lib.rs  lightbulb.rs  lspclient.rs  lspregistry.rs  markdown.rs  mdpreview.rs  nav.rs  navsurfaces.rs  newproj.rs  newprojabi.rs  outline.rs  palette.rs  panels.rs  panes.rs  (+37 more)
crates/mty-rt-abi/: Cargo.toml
crates/mty-rt-abi/src/: lib.rs
design/: mockup.html  option-a.html  option-b.html  option-c.html
docs/: mighty-language-lessons.md
examples/: agents.mty  clean.mty  demo.mty  long.txt  sample.json  sample.py  sample.rs  short.txt  with_error.mty
examples/webspin/: README.md  mighty.toml
repro/: mighty.toml  repro.mty  repro_print.c
samples/: agents.mty  hello.mty  web-spinner.mty
screenshots/: demo.mty  ghost_demo.mty  outline_demo.mty
src/: buffer.mty  cursor.mty  line.mty  main.mty  testutil.mty  tokenize.mty  viewport.mty
tests/: buffer_test.mty  cursor_test.mty  line_test.mty  tokenize_test.mty  viewport_test.mty
tools/: make-icon.py  overlay-gallery.ps1  win-ui-harness.ps1
(+5 files in other folders)
