[package]
name = "mighty-ui-sys"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
# `staticlib` for the C ABI the Mighty IDE links against; `lib` (rlib) so the
# in-crate `#[test]` harness can build (a pure staticlib can't host tests).
crate-type = ["staticlib", "lib"]

[dependencies]
winit = "0.30"
wgpu = "22"
glyphon = "0.6"
pollster = "0.3"
raw-window-handle = "0.6"
bytemuck = { version = "1", features = ["derive"] }
